@@ -7,7 +7,7 @@ use Pod::Markdown;
 # Test url aliases.
 local $Pod::Markdown::URL_PREFIXES{manny} = 'http://manny.local/page/';
 
-my $parser = Pod::Markdown->new(
+my %defaults = (
   # We'll test the various formats later
   # so for the first set just pass them through.
   perldoc_fragment_format  => sub { $_ },
@@ -16,24 +16,30 @@ my $parser = Pod::Markdown->new(
 
 my ($pod_prefix, $man_prefix) =
   map { ($_->perldoc_url_prefix, $_->man_url_prefix) }
-    $parser->new;
+    Pod::Markdown->new;
 
-my $alt_text_for_urls = (Pod::ParseLink->VERSION >= 1.10);
+my $alt_text_for_urls = 1; # Assume we have a sufficient Pod::Simple version.
+
+my ($space, $quot) =
+  map { sprintf '&#x%x;', ord }
+    q[ ], q["];
 
 my @tests = (
 
 # in order of L<> examples in perlpod:
 ['name',                         q<name>,                   qq^[name](${pod_prefix}name)^],
 ['other module',                 q<Other::Pod>,             qq^[Other::Pod](${pod_prefix}Other::Pod)^],
+['other module, empty text',     q<|Other::Pod>,            qq^[Other::Pod](${pod_prefix}Other::Pod)^],
 
+['other module/sec, empty text', q<|Other::Pod/sec>,        qq^["sec" in Other::Pod](${pod_prefix}Other::Pod#sec)^],
 ['section in other module',      q<Other::Pod/sec>,         qq^["sec" in Other::Pod](${pod_prefix}Other::Pod#sec)^],
-['quoted section in other doc',  q<perlsyn/"For Loops">,    qq^["For Loops" in perlsyn](${pod_prefix}perlsyn#For Loops)^],
+['quoted section in other doc',  q<perlsyn/"For Loops">,    qq^["For Loops" in perlsyn](${pod_prefix}perlsyn#For${space}Loops)^],
 
 ['section in this doc',          q</sec>,                   qq^["sec"](#sec)^],
 ['quoted section in this doc',   q</"sec">,                 qq^["sec"](#sec)^],
+['/sec, empty text',             q<|/sec>,                  qq^["sec"](#sec)^],
 
 ['other module, alternate text', q<other-pod|Other::Pod>,   qq^[other-pod](${pod_prefix}Other::Pod)^],
-['other module, empty text',     q<|Other::Pod>,            qq^[Other::Pod](${pod_prefix}Other::Pod)^],
 
 ['sec in other mod, alt text',   q<x-sec|Other::Pod/sec>,   qq^[x-sec](${pod_prefix}Other::Pod#sec)^],
 ['"sec" in other mod, alt text', q<x-sec|Other::Pod/"sec">, qq^[x-sec](${pod_prefix}Other::Pod#sec)^],
@@ -47,14 +53,14 @@ my @tests = (
 ['http, alt text (perl 5.12)',   q<web|http://website>,     qq^[web](http://website)^],
 
 ['embedded codes',               q^the docs on C<$.>|perlvar/"$."^, qq^[the docs on `\$.`](${pod_prefix}perlvar#\$.)^],
-["don't expand nested L's",      q^perlpodspec/"About LE<lt>...E<gt> Codes"^, qq^["About L<...> Codes" in perlpodspec](${pod_prefix}perlpodspec#About L<...> Codes)^],
+["don't expand nested L's",      q^perlpodspec/"About LE<lt>...E<gt> Codes"^, qq^["About L<...> Codes" in perlpodspec](${pod_prefix}perlpodspec#About${space}L<...>${space}Codes)^],
 
 # perlpodspec examples:
 ['name',                         q<Foo::Bar>,               qq^[Foo::Bar](${pod_prefix}Foo::Bar)^],
 ['alt|pod/sec', q<Perlport's section on NL's|perlport/Newlines>, qq^[Perlport's section on NL's](${pod_prefix}perlport#Newlines)^],
 ['pod/sec',                      q<perlport/Newlines>,      qq^["Newlines" in perlport](${pod_prefix}perlport#Newlines)^],
 ['man/sec',               q<crontab(5)/"DESCRIPTION">,      qq^["DESCRIPTION" in crontab(5)](${man_prefix}5/crontab)^],
-['/section name',                q</Object Attributes>,     qq^["Object Attributes"](#Object Attributes)^],
+['/section name',                q</Object Attributes>,     qq^["Object Attributes"](#Object${space}Attributes)^],
 ['http',                         q<http://www.perl.org/>,   qq^[http://www.perl.org/](http://www.perl.org/)^],
 ['text|http',             q<Perl.org|http://www.perl.org/>, qq^[Perl.org](http://www.perl.org/)^],
 
@@ -63,21 +69,22 @@ my @tests = (
 ['man(5)',                       q<crontab(5)>,             qq^[crontab(5)](${man_prefix}5/crontab)^],
 
 # how should these be handled?  these are unlikely/contrived occurrences and are mostly here for test coverage
-['man()',                        q<crontab()>,              qq^[crontab()](${man_prefix}1/crontab)^],
-['man(X)',                       q<crontab(X)>,             qq^[crontab(X)](${man_prefix}X/crontab)^],
-['man(2)-page',                  q<crontab(2)-page>,        qq^[crontab(2)-page](${man_prefix}2/crontab)^],
-['(X)man',                       q<(X)foo>,                 qq^[(X)foo](${man_prefix}1/(X)foo)^],
-['()',                           q<()>,                     qq^[()](${man_prefix}1/())^],
+#['man()',                        q<crontab()>,              qq^[crontab()](${man_prefix}1/crontab)^],
+#['man(X)',                       q<crontab(X)>,             qq^[crontab(X)](${man_prefix}X/crontab)^],
+#['man(2)-page',                  q<crontab(2)-page>,        qq^[crontab(2)-page](${man_prefix}2/crontab)^],
+#['(X)man',                       q<(X)foo>,                 qq^[(X)foo](${man_prefix}1/(X)foo)^],
+#['()',                           q<()>,                     qq^[()](${man_prefix}1/())^],
 
 # varies according to pod-to-html formatter:
-['other/section name',           q<Other/Section Name>,     qq^["Section Name" in Other](${pod_prefix}Other#Section Name)^],
+['other/section name',           q<Other/Section Name>,     qq^["Section Name" in Other](${pod_prefix}Other#Section${space}Name)^],
 
-# Don't insert backslashes (to escape markdown).
-['_underscore_',                 q<_underscore_>,           qq^[_underscore_](${pod_prefix}_underscore_)^],
-['*asterisk*',                   q<*asterisk*>,             qq^[*asterisk*](${pod_prefix}*asterisk*)^],
+# Insert backslashes (to escape markdown).
+['_underscore_',                 q<_underscore_>,           qq^[\\_underscore\\_](${pod_prefix}_underscore_)^],
+['*asterisk*',                   q<*asterisk*>,             qq^[\\*asterisk\\*](${pod_prefix}*asterisk*)^],
+['section with quotes',          q<whiskey|/Say "Cheese">,  qq^[whiskey](#Say${space}${quot}Cheese${quot})^],
 
 # is there something better to do?
-['no url: empty',                q<>,                       qq^L<>^],
+#['no url: empty',                q<>,                       qq^L<>^], # FIXME: Error
 ['no url: pipe',                 q<|>,                      qq^L<|>^],
 ['no url: slash',                q</>,                      qq^L</>^],
 ['no url: quotes',               q<"">,                     qq^L<"">^],
@@ -134,7 +141,7 @@ test_fragments(
   q^perlpodspec/About Data Paragraphs and "=beginE<sol>=end" Regions^,
   {
     metacpan => q^["About Data Paragraphs and "=begin/=end" Regions" in perlpodspec](:perlpodspec#About-Data-Paragraphs-and-begin-end-Regions)^,
-    sco      => q^["About Data Paragraphs and "=begin/=end" Regions" in perlpodspec](:perlpodspec#About_Data_Paragraphs_and_"=begin/=end"_Regions)^,
+    sco      => qq^["About Data Paragraphs and "=begin/=end" Regions" in perlpodspec](:perlpodspec#About_Data_Paragraphs_and_${quot}=begin/=end${quot}_Regions)^,
   },
   'section with pod commands',
 );
@@ -143,7 +150,7 @@ test_fragments(
   q^detach|Catalyst/"$c->detach( $action [, \@arguments ] )"^,
   {
     metacpan => q^[detach](:Catalyst#c-detach-action-arguments)^,
-    sco      => q^[detach](:Catalyst#$c->detach(_$action_[,_\@arguments_]_))^,
+    sco      => q^[detach](:Catalyst#$c->detach\(_$action_[,_\\\\@arguments_]_\))^,
   },
   'section with sigils and syntax',
 );
@@ -177,18 +184,18 @@ test_fragments(
 test_fragments(
   q<A [charclass] is \\* bad|page/section with (Parens) and \\Escapes *star*>,
   {
-    metacpan => q^[A \[charclass\] is \\\\* bad](:page#section-with-Parens-and-Escapes-star)^,
-    sco      => q^[A \[charclass\] is \\\\* bad](:page#section_with_\(Parens\)_and_\Escapes_\*star\*)^,
+    metacpan =>  q^[A \\[charclass\\] is \\\\\\* bad](:page#section-with-Parens-and-Escapes-star)^,
+    sco      => qq^[A \\[charclass\\] is \\\\\\* bad](:page#section_with_\\(Parens\\)_and_\\\\Escapes_*star*)^,
   },
-  { unescape => 0 },
   'extra long real life example complicated section',
 );
 
 
 foreach my $test ( @tests ){
   my ($desc, $pod, $mkdn, %opts) = @$test;
+  %opts = %defaults unless %opts;
   test_link(
-    (%opts ? Pod::Markdown->new(%opts) : $parser),
+    Pod::Markdown->new(%opts),
     $pod, $mkdn, $desc,
   );
 }
@@ -200,10 +207,11 @@ sub test_link {
     skip 'alt text with schemes/absolute URLs not supported until perl 5.12 / Pod::ParseLink 1.10', 1
       if !$alt_text_for_urls && $pod =~ m/\|\w+:[^:\s]\S*\z/; # /alt text \| url (not perl module)/ (regexp from perlpodspec)
 
-    # interior_sequence is what we specifically want to test
-    is $parser->interior_sequence(L => $pod), $mkdn, $desc . ' (interior_sequence)';
-    # but interpolate() tests the pod parsing as a whole (which can expose recursion bugs, etc)
-    is $parser->interpolate("L<<< $pod >>>"), $mkdn, $desc . ' (interpolate)';
+    $parser->output_string(\(my $got));
+    $parser->parse_string_document("=pod\n\nL<<< $pod >>>");
+    chomp($got);
+
+    is $got, $mkdn, $desc . ' (interpolate)';
   }
 }
 
